--- a/PAGE2/style.css
+++ b/PAGE2/style.css
@@ -2,7 +2,7 @@ body {
     font-family: 'Lato', sans-serif;
     margin: 0;
     padding: 0;
-    overflow: hidden;
+    overflow: auto;
 }
 
 header {
@@ -96,6 +96,6 @@ main {
     position: relative;
     z-index: 1;
     color: white;
-    padding-top: 6em;
+    padding-top: 7em;
     padding-bottom: 3em;
 }
